<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAppHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/raleway"
        android:paddingHorizontal="10dp"
        android:text="@string/temperature_converter"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgBg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imgBg"
        app:layout_constraintTop_toTopOf="@+id/imgBg" />
    <LinearLayout
        android:id="@+id/selectType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAppHeading">

        <TextView
            android:id="@+id/textType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/fahrenheit"
            android:textAllCaps="true"
            android:textColor="@color/orange"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/baseline_keyboard_arrow_down_24" />

    </LinearLayout>


    <EditText
        android:id="@+id/editInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/filer"
        android:drawableLeft="@drawable/sharp_thermostat_24"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/eidt_hint"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_marginTop="-30dp"
        android:layout_marginHorizontal="45dp"
        android:layout_marginBottom="-60dp"
        android:layout_height="wrap_content"
        android:src="@drawable/temperature" />

    <TextView
        android:id="@+id/textResultType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:text="@string/celsius"
        android:textAllCaps="true"
        android:textColor="@color/darkblue"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/textResult"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textColorHint="#99FFFFFF"
        android:textSize="48sp" />

</LinearLayout>